feat: complete game score view heading lg scrn.

--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,14 @@
   pointer-events: none;
 }
 
+.container {
+  max-width: 100%;
+  padding-right: 0px;
+  padding-left: 0px;
+  margin-right: auto;
+  margin-left: auto;
+}
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
