--- a/src/components/Scores.css
+++ b/src/components/Scores.css
@@ -11,6 +11,36 @@
 
 .results-view:first-child {
 	margin-top: 30px;
+	border-style: none;
+	border-width: 0em;
+	border-radius: 0.3em;
+	box-shadow: 1px 1px 4px 1px #bbb;
+	transition: 0.2s;
+	-webkit-transition: 0.2s;
+	-moz-transition: 0.2s;
+	-o-transition: 0.2s;
+	cursor: pointer;
+	transform-style: preserve-3d;
+	-webkit-transform-style: preserve-3d;
+	-moz-transform-style: preserve-3d;
+	-ms-transform-style: preserve-3d;
+}
+
+.results-view:hover,
+.results-view:focus,
+.results-view:active {
+	background-color: white;
+	box-shadow: 0px 0px 0px 0px #dae3e7;
+	transition: 0.2s;
+	-webkit-transition: 0.2s;
+	-moz-transition: 0.2s;
+	-o-transition: 0.2s;
+	cursor: pointer;
+	transform-style: preserve-3d;
+	-webkit-transform-style: preserve-3d;
+	-moz-transform-style: preserve-3d;
+	-ms-transform-style: preserve-3d;
+	opacity: 0.95;
 }
 
 .jumbotron {
