--- a/src/components/Scores.css
+++ b/src/components/Scores.css
@@ -1,19 +1,34 @@
+.row {
+	margin-left: 0px;
+	margin-right: 0px;
+}
+
 .scores-view {
 	background: #dae3e7;
 }
 
 .results-view {
 	background: white;
-	margin-left: 30px;
-	margin-right: 30px;
+	margin-left: 10px;
+	margin-right: 10px;
 	width: 100%;
+}
+
+.press {
+	border-top: 1px solid #dae3e7;
+}
+
+.text-muted {
+	margin-left: 20px;
+	margin-bottom: 10px;
+	margin-top: 10px;
 }
 
 .results-view:first-child {
 	margin-top: 30px;
 	border-style: none;
 	border-width: 0em;
-	border-radius: 0.3em;
+	border-radius: 0.25em;
 	box-shadow: 1px 1px 4px 1px #bbb;
 	transition: 0.2s;
 	-webkit-transition: 0.2s;
@@ -40,13 +55,28 @@
 	-webkit-transform-style: preserve-3d;
 	-moz-transform-style: preserve-3d;
 	-ms-transform-style: preserve-3d;
-	opacity: 0.95;
+}
+
+.scores-view-game-results:hover,
+.scores-view-game-results:focus,
+.scores-view-game-results:active {
+	opacity: 0.85;
 }
 
 .jumbotron {
 	margin-bottom: 0px;
+	padding: 0rem 0rem;
 }
 
 .scores-view-game-results:last-child .results-view {
 	margin-bottom: 30px;
+}
+
+.league-rank .row:nth-child(1) p {
+	margin-top: 1rem;
+}
+
+.league-rank .row p {
+	font-weight: bold;
+	font-size: 14px;
 }
