--- a/src/components/Scores.css
+++ b/src/components/Scores.css
@@ -19,6 +19,9 @@
 }
 
 .text-muted {
+}
+
+.press-release {
 	margin-left: 20px;
 	margin-bottom: 10px;
 	margin-top: 10px;
@@ -116,5 +119,18 @@
 }
 
 .team-name .row:nth-child(2) p {
+	margin-top: 0.2rem;
+}
+
+.w-l {
+	font-weight: 700;
+	font-size: 16px;
+}
+
+.team-record .row:nth-child(1) p {
+	margin-top: 1rem;
+}
+
+.team-record .row:nth-child(2) p {
 	margin-top: 0.2rem;
 }
