feat: Completed all views with abstraction to accept props for reuse.

--- a/src/components/Scores.css
+++ b/src/components/Scores.css
@@ -37,7 +37,7 @@
 	-webkit-transition: 0.2s;
 	-moz-transition: 0.2s;
 	-o-transition: 0.2s;
-	cursor: pointer;
+	cursor: default;
 	transform-style: preserve-3d;
 	-webkit-transform-style: preserve-3d;
 	-moz-transform-style: preserve-3d;
@@ -53,7 +53,7 @@
 	-webkit-transition: 0.2s;
 	-moz-transition: 0.2s;
 	-o-transition: 0.2s;
-	cursor: pointer;
+	cursor: default;
 	transform-style: preserve-3d;
 	-webkit-transform-style: preserve-3d;
 	-moz-transform-style: preserve-3d;
