--- a/src/containers/GameScores.css
+++ b/src/containers/GameScores.css
@@ -9,7 +9,7 @@
 
 .game-view-title {
 	justify-content: flex-start;
-	padding-left: 15px;
+	padding-left: 25px;
 	padding-top: 30px;
 }
 
@@ -23,7 +23,7 @@
 
 .game-view-result {
 	justify-content: flex-start;
-	padding-left: 15px;
+	padding-left: 25px;
 	padding-top: 0px;
 }
 
@@ -33,4 +33,20 @@
 	margin-bottom: 20px;
 	color: #545e69;
 	font-size: 20px;
+}
+
+.iframe-container {
+	position: relative;
+	overflow: hidden;
+	padding-top: 66%;
+	width: 100%;
+}
+
+.iframe-container iframe {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	border: 0;
 }
