--- a/src/containers/GameScores.css
+++ b/src/containers/GameScores.css
@@ -54,3 +54,85 @@
 	height: 100%;
 	border: 0;
 }
+
+.iframe-container-lg {
+	position: relative;
+	overflow: hidden;
+	padding-top: 85%;
+	max-width: 100%;
+}
+
+.iframe-container-lg iframe {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	border: 0;
+}
+
+.iframe-container-md {
+	position: relative;
+	overflow: hidden;
+	padding-top: 105%;
+	max-width: 100%;
+}
+
+.iframe-container-md iframe {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	border: 0;
+}
+
+.iframe-container-sm {
+	position: relative;
+	overflow: hidden;
+	padding-top: 123%;
+	max-width: 100%;
+}
+
+.iframe-container-sm iframe {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	border: 0;
+}
+
+.iframe-container-xs {
+	position: relative;
+	overflow: hidden;
+	padding-top: 220%;
+	max-width: 100%;
+}
+
+.iframe-container-xs iframe {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	border: 0;
+}
+
+.iframe-container-s {
+	position: relative;
+	overflow: hidden;
+	padding-top: 390%;
+	max-width: 100%;
+}
+
+.iframe-container-s iframe {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	border: 0;
+}
+
+
